<resources>
    <string name="app_name">PROGETTO TOTEM</string>
    <string name="welcome">Benvenuto/a!</string>
    <string name="order_now">Ordina ora!</string>
    <string name="options">Opzioni</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="access_personal">Accedi al tuo account personale</string>
    <string name="username">Nome Utente</string>
    <string name="password">Password</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="email">Indirizzo Email</string>
    <string name="name_optional">Nome (Opzionale)</string>
    <string name="surname_optional">Cognome (Opzionale)</string>
    <string name="phone_optional">Numero di Telefono (Opzionale)</string>
    <string name="gender">Genere:</string>
    <string name="man">Uomo</string>
    <string name="woman">Donna</string>
    <string name="other">Altro</string>
    <string name="prefer_not_to_say">Preferisco non dirlo</string>
    <string name="create_account">Crea un Account</string>
    <string name="enter_with_google">Entra con Google</string>
    <string name="pass_requirements">Richiesti: 1 maiuscolo, 1 minuscola, 1 numero, 1 simbolo</string>
    <string name="login_title">Accedi</string>
    <string name="login_hint">Email, Telefono o Username</string>
    <string name="login_error">I dati non sono corretti</string>
    <string name="what_to_order">Cosa vuoi ordinare?</string>
    <string name="categories">Categorie</string>
    <string name="cart_title">Il tuo Carrello</string>
    <string name="total">Totale:</string>
    <string name="proceed_payment">Procedi al Pagamento</string>
    <string name="payment_title">Pagamento</string>
    <string name="amount">Importo:</string>
    <string name="amount_format">Importo: € %.2f</string>
    <string name="select_method">Seleziona il metodo:</string>
    <string name="credit_card">Carta di Credito / Debito</string>
    <string name="cash">Contanti alla consegna</string>
    <string name="card_number">Numero Carta</string>
    <string name="expiry">MM/AA</string>
    <string name="cvv">CVV</string>
    <string name="save_card">Salva carta per acquisti futuri</string>
    <string name="confirm_order">Conferma Ordine</string>
    <string name="thanks">Grazie per l\'acquisto, %s</string>
    <string name="payment_done">Pagamento effettuato!</string>
    <string name="receipt_sent">Ricevuta inviata all\'indirizzo di posta elettronica</string>
    <string name="finish">Finisci</string>
    <string name="appearance">Aspetto</string>
    <string name="system_default">Predefinito di Sistema</string>
    <string name="light">Chiaro</string>
    <string name="dark">Scuro</string>
    <string name="language">Lingua</string>
    <string name="italian">Italiano</string>
    <string name="english">English</string>
    <string name="support_info">Supporto e Info</string>
    <string name="app_info">Info sull\'App</string>
    <string name="help">Aiuto</string>
    <string name="report_bug">Segnala un Bug</string>
    <string name="review">Lascia una Recensione</string>
    <string name="contact_data">Dati di Contatto</string>
    <string name="contact_desc">Inserisci i tuoi dati per ricevere la ricevuta dell\'ordine.</string>
    <string name="proceed">Procedi</string>
    <string name="add_to_cart">Aggiungi</string>
    <string name="add_to_cart_btn_format">AGGIUNGI  € %.2f</string>
    <string name="added_to_cart_format">%s aggiunto!</string>
    <string name="see_details">Vedi Dettagli</string>
    <string name="added_to_cart_msg">Aggiunto al carrello!</string>
    <string name="fill_mandatory">Compila tutti i campi obbligatori</string>
    <string name="pass_not_valid">La password non rispetta i requisiti</string>
    <string name="pass_not_match">Le password non coincidono</string>
    <string name="reg_complete">Registrazione completata! Accedi ora.</string>
    <string name="reg_error">Errore nella registrazione</string>
    <string name="wrong_credentials">Credenziali errate o utente non registrato</string>
    <string name="google_not_configured">Accesso con Google non configurato</string>
    <string name="insert_card_data">Inserisci i dati della carta</string>
    <string name="guest_name">Ospite</string>
    <string name="user_name">Utente</string>
    <string name="panini">Panini</string>
    <string name="primi">Primi</string>
    <string name="secondi">Secondi</string>
    <string name="bevande">Bevande</string>
    <string name="storico_ordini">Storico Ordini</string>
    <string name="logout">Logout</string>
    <string name="preferiti">Preferiti</string>
    <string name="nessun_preferito">Nessun prodotto nei preferiti</string>
    <string name="rimosso_preferiti">Rimosso dai preferiti</string>
    <string name="aggiunto_preferiti">Aggiunto ai preferiti</string>
    <string name="rifai_ordine">Rifai</string>
    <string name="prodotti_aggiunti">Prodotti aggiunti al carrello!</string>
    <string name="go_back">Torna Indietro</string>
    <string name="default_price" translatable="false">€ 0,00</string>
    <string name="go_to_cart">Carrello</string>
    <string name="product_name">Nome del Prodotto</string>
    <string name="description">Descrizione</string>
    <string name="quantity">Quantità</string>
    <string name="total_price">Importo: € 0,00</string>
    <string name="alt_method" translatable="false">PayPal / Satispay</string>
    <string name="cambia">Cambia Layout</string>
    <string name="categoria">Categoria</string>
    <string name="requirements">Richiesti: 1 maiuscolo, 1 minuscolo, 1 numero, 1 simbolo</string>


    <!-- Prodotti -->
    <string name="prod_hamburger">Hamburger Classico</string>
    <string name="desc_hamburger">Manzo, insalata, pomodoro</string>
    <string name="prod_cheeseburger">Cheeseburger</string>
    <string name="desc_cheeseburger">Manzo, cheddar, cetriolini</string>
    <string name="prod_pasta">Pasta al Pomodoro</string>
    <string name="prod_pizza" translatable="false">Pizza</string>
    <string name="desc_pizza">Pomodoro, mozzarella, funghi</string>
    <string name="prod_pasta_al_pesto">Trofie al pesto</string>
    <string name="desc_pasta_al_pesto">Trofie alla genovese</string>
    <string name="desc_pasta">Penne con sugo fresco e basilico</string>
    <string name="prod_lasagna">Lasagna</string>
    <string name="desc_lasagna">Lasagna alla bolognese fatta in casa</string>
    <string name="prod_cotoletta">Cotoletta</string>
    <string name="desc_cotoletta">Cotoletta di pollo con patatine</string>
    <string name="prod_grigliata">Grigliata Mista</string>
    <string name="desc_grigliata">Maiale, pollo e manzo alla brace</string>
    <string name="prod_acqua">Acqua</string>
    <string name="desc_acqua">Naturale o frizzante 50cl</string>
    <string name="prod_coca">Coca Cola</string>
    <string name="desc_coca">Lattina 33cl</string>
    <string name="prod_fanta" translatable="false">Fanta</string>
    <string name="desc_fanta">Lattina 33cl</string>
    <string name="prod_sprite" translatable="false">Sprite</string>
    <string name="desc_sprite">Lattina 33cl</string>
    <string name="prod_fanta_zero" translatable="false">Fanta Zero</string>
    <string name="desc_fanta_zero">Lattina 33cl</string>
    <string name="prod_birra">Birra</string>
    <string name="desc_birra">Lattina 33cl</string>
    <string name="prod_chinotto" translatable="false">Chinotto</string>
    <string name="desc_chinotto">Lattina 33cl</string>
    <string name="prod_lemon_soda" translatable="false">Lemon Soda</string>
    <string name="desc_lemon_soda">Lattina 33cl</string>
    <string name="prod_oran_soda" translatable="false">Oran Soda</string>
    <string name="desc_oran_soda">Lattina 33cl</string>
    <string name="prod_water">Acqua Tonica</string>
    <string name="desc_water">Lattina 33cl</string>
    <string name="prod_the_pesca">Estathé alla pesca</string>
    <string name="desc_the_pesca">Lattina 33cl</string>
    <string name="prod_the_limone">Estathé al limone</string>
    <string name="desc_the_limone">Lattina 33cl</string>

    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="cad">cad. €</string>
    <string name="price_format" translatable="false">€ %.2f</string>
    <string name="unit_price_format">cad. € %.2f</string>
    <string name="order_items_format">Prodotti: %s</string>
    <string name="order_item_qty_format">%dx %s</string>

    <!-- Toast -->
    <string name="errore_campi_vuoti">Compila tutti i campi obbligatori!</string>
    <string name="errore_email_non_valida">Inserisci un\'email valida!</string>
    <string name="errore_credenziali">Credenziali non valide!</string>
    <string name="added_to_cart">Aggiunto al carrello!</string>
    <string name="errore_password_non_uguali">Le password non coincidono!</string>"
</resources>