<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_cat"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_login_std"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_profilo_std"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/user_name" />
        <item
            android:id="@+id/nav_carrello_std"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/go_to_cart" />
        <item
            android:id="@+id/nav_opzioni_std"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/options" />
        <item
            android:id="@+id/nav_logout_std"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/logout" />
    </group>
</menu>