<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout_global"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary_bg"
        tools:context=".PagamentoActivity">

        <include
            android:id="@+id/topBar"
            layout="@layout/partial_top_bar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTitoloPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/payment_title"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topBar" />

        <TextView
            android:id="@+id/textImportoPagamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/total_price"
            android:textColor="@color/text_color_primary"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitoloPagamento" />

        <TextView
            android:id="@+id/textScegliMetodo"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/select_method"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textImportoPagamento" />

        <RadioGroup
            android:id="@+id/radioGroupPagamento"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/main_bg"
            android:elevation="2dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textScegliMetodo">

            <RadioButton
                android:id="@+id/radioCarta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:paddingBottom="8dp"
                android:text="@string/credit_card"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/layoutDatiCarta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:visibility="visible">

                <EditText
                    android:id="@+id/editNumeroCarta"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@color/edit_text_bg"
                    android:hint="@string/card_number"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editScadenza"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@color/edit_text_bg"
                        android:hint="@string/expiry"
                        android:inputType="date"
                        android:padding="8dp"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/editCVV"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="1"
                        android:background="@color/edit_text_bg"
                        android:hint="@string/cvv"
                        android:inputType="numberPassword"
                        android:padding="8dp"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <RadioButton
                android:id="@+id/radioPaypal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/alt_method"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radioContanti"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cash"
                android:textSize="16sp" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkSalvaCarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/save_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupPagamento" />

        <Button
            android:id="@+id/btnConfermaPagamento"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="#FF2C2C"
            android:onClick="confermaPagamento"
            android:text="@string/confirm_order"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view_global"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/header_drawer"
        app:menu="@menu/drawer_menu_standard" />

</androidx.drawerlayout.widget.DrawerLayout>