<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_bg"
    android:fillViewport="true"
    tools:context=".CategorieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageButton
            android:id="@+id/btnIndietroCat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="33dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/go_back"
            android:onClick="tornaIndietro"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert" />

        <ImageButton
            android:id="@+id/btnVaiAlCarrelloCat"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="18dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/go_to_cart"
            android:onClick="apriCarrello"
            android:padding="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit" />

        <TextView
            android:id="@+id/textTitoloCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/what_to_order"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnCat1"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/panini"
            android:onClick="scegliCategoria"
            android:scaleType="centerInside"
            android:src="@drawable/burger_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTitoloCategorie" />

        <ImageButton
            android:id="@+id/btnCat2"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/primi"
            android:onClick="scegliCategoria"
            android:scaleType="centerInside"
            android:src="@drawable/pasta_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCat1" />

        <ImageButton
            android:id="@+id/btnCat3"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/secondi"
            android:onClick="scegliCategoria"
            android:scaleType="centerInside"
            android:src="@drawable/steak_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCat2" />

        <ImageButton
            android:id="@+id/btnCat4"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/bevande"
            android:onClick="scegliCategoria"
            android:scaleType="centerInside"
            android:src="@drawable/drinks_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnCat3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
